fix overlapping edit and delete labels

--- a/css/shortcuts.css
+++ b/css/shortcuts.css
@@ -72,7 +72,7 @@
     outline: none;
   }
   .shortcut-tile .edit-btn {
-    right: 32px;
+    right: 40px;
   }
   .shortcut-tile .delete-btn {
     right: 4px;
